[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/player.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Enemy/PlayerDetection.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.28761
height = 5.47851

[sub_resource type="CircleShape2D" id=2]
radius = 60.0

[sub_resource type="CircleShape2D" id=3]
radius = 30.0

[sub_resource type="CircleShape2D" id=4]
radius = 50.0

[node name="Enemy" type="KinematicBody2D"]
light_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 5.5 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Enemy" type="Sprite" parent="."]
light_mask = 3
texture = ExtResource( 1 )
hframes = 8
vframes = 2
frame = 9

[node name="PlayerDetectionCandle" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 0

[node name="CollisionShape2D" parent="PlayerDetectionCandle" index="0"]
shape = SubResource( 2 )

[node name="PlayerDetection" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 0

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
shape = SubResource( 3 )

[node name="PlayerPursuit" parent="." instance=ExtResource( 3 )]
visible = false

[node name="CollisionShape2D" parent="PlayerPursuit" index="0"]
shape = SubResource( 4 )

[editable path="PlayerDetectionCandle"]
[editable path="PlayerDetection"]
[editable path="PlayerPursuit"]
